[project]
name = "vita-blackouts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioresponses>=0.7.8",
    "beautifulsoup4>=4.14.2",
    "calmjs-parse>=1.3.4",
    "homeassistant>=2025.4.4",
    "install-playwright>=0.1.1",
    "mypy>=1.18.2",
    "parsel>=1.10.0",
    "playwright>=1.56.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
    "types-beautifulsoup4>=4.12.0.20250516",
]
